@@ -1,4 +1,5 @@
 Development
+	Add in check for GIO, enables functionality in libgmlib
 	Remove need for LIBTOOL, program should compile cleaner now
 	Patch to correct --as-needed linker flag
 0.9.6
